examples/negative/handle_leak/handle_clause_wrong_arity.kai
# Silent contract (#511 audit): handler clause arity does not
# match the effect's op declaration. `print_io` is declared as
# `print_io(s: String)` (1 user param + implicit resume), but
# the clause introduces 3 user params before `resume`. Typer
# should reject; today the compiler emits ill-formed C.

effect Io { print_io(s: String) : Unit }

fn main() : Int {
  handle {
    Io.print_io("a")
    0
  } with Io {
    print_io(a, b, c, resume) -> resume(())
    return(x)                 -> x
  }
}
